fix: reducing spacing

--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ main {
   border-radius: 1rem;
   overflow: hidden;
   width: 100%;
-  max-width: 24rem;
+  max-width: 23rem;
   grid-template-columns: 1fr;
   place-items: center;
   grid-template-rows:
@@ -83,7 +83,7 @@ main {
 
 .card__main {
   width: 100%;
-  padding: 1.5rem 1rem;
+  padding: 1.25rem 1rem;
   border-bottom: 1px var(--gray-100) solid;
 }
 
@@ -109,7 +109,7 @@ main {
 .card__stats {
   display: flex;
   gap: 3rem;
-  padding: 1.5rem 1rem;
+  padding: 1.25rem 1rem;
   justify-content: center;
   width: 100%;
 }
